# learn-ansible

./: .gitignore  README.md
ansible/: inventory.ini
ansible/backup_sh/: full_backup.sh  scaffold_month.sh  stream_binlogs.sh
ansible/config_templates/keepalived/: app.conf.j2  keepalived.conf.j2
ansible/firewall/global/: ip_def.nft  subnets.nft
ansible/firewall/groups/: app.nft
ansible/inventories/prod/: inventory.ini
ansible/inventories/stg/: inventory.ini
ansible/playbooks/: app.yml  common.yml  db.yml  identity.yml  k0s-ctrl.yml  k0s-nodes.yml  kube.yml  main.yml  monitoring.yml  postgres.yml  sshd.yml  unix_identity.yml  za_vm.yml
ansible/playbooks/backup/: main.yml  setup_backup_clients.yml  setup_backup_server.yml  setup_cron.yml
ansible/playbooks/gitlab/: gitlab_runner.toml.j2  main.yml  nginx_gitlab_http.conf.j2  tls_cnf.yml
ansible/playbooks/mysql-cluster/: cluster.cnf.j2  main.yml
ansible/playbooks/runner_cluster/: main.yml  workers.yml
ansible/playbooks/sudoer/: db.yml
ansible/playbooks/tasks/: install_victoria.yml
ansible/roles/firewall/: README.md
ansible/roles/percona_mysql/: README.md
ansible/roles/unix_identity/: README.md
app/: Dockerfile  main.py  pyproject.toml
mysql_backup_cli/: README.md  main.py  pyproject.toml
mysql_backup_cli/cli/: app.py
mysql_backup_cli/docker/: cli.Dockerfile  docker-compose.yml
mysql_backup_cli/docker/initdb/: 01-schema.sql  02-user.sql  03-seed.sql
vm-config/: Vagrantfile
vm-config/playbooks/: app.yml  main.yml
vm-config/playbooks/tasks/: install_docker.yml
(+127 files in other folders)
